--- a/build.gradle
+++ b/build.gradle
@@ -1,4 +1,3 @@
-
 plugins {
     id 'java'
     id 'maven-publish'
@@ -7,41 +6,40 @@ plugins {
 
 repositories {
     mavenLocal()
+
     maven {
         url = uri('https://repo.maven.apache.org/maven2/')
     }
 }
 
-dependencies {
-    implementation 'com.fasterxml.jackson.core:jackson-core:2.13.4'
-    implementation 'com.fasterxml.jackson.core:jackson-databind:2.13.4'
-    implementation 'com.fasterxml.jackson.core:jackson-annotations:2.13.4'
-    implementation 'com.fasterxml.jackson.dataformat:jackson-dataformat-xml:2.13.4'
-    implementation fileTree(dir: 'libs', include: '*.jar')
-}
-
 group = 'rip.jnic'
 version = '1.0-SNAPSHOT'
-description = 'NativeObfuscator'
-java.sourceCompatibility = JavaVersion.VERSION_1_8
+description = 'OpenMyJ2C'
 
-publishing {
-    publications {
-        maven(MavenPublication) {
-            from(components.java)
-        }
-    }
+targetCompatibility = sourceCompatibility = JavaVersion.VERSION_1_8
+
+dependencies {
+    implementation 'com.fasterxml.jackson.core:jackson-core:2.14.2'
+    implementation 'com.fasterxml.jackson.core:jackson-databind:2.14.2'
+    implementation 'com.fasterxml.jackson.dataformat:jackson-dataformat-xml:2.14.2'
+
+    implementation 'org.ow2.asm:asm-commons:9.4'
+    implementation 'org.ow2.asm:asm-tree:9.4'
+
+    implementation 'org.apache.commons:commons-compress:1.22'
+
+    implementation 'info.picocli:picocli:4.7.1'
 }
 
 tasks.withType(JavaCompile) {
     options.encoding = 'UTF-8'
 }
 
-jar {
-    manifest {
-        attributes('Implementation-Title': 'OpenMyJ2C',
-                'Implementation-Version': '1.0',
-                'Main-Class': 'rip.jnic.Main')
-    }
+shadowJar {
 }
-targetCompatibility = JavaVersion.VERSION_1_8
+
+jar.manifest.attributes(
+        'Main-Class': 'rip.jnic.Main'
+)
+
+build.dependsOn(shadowJar)
